--- a/views/index.html
+++ b/views/index.html
@@ -74,7 +74,7 @@
                         About Us&emsp;<i class="fa-solid fa-circle-info"></i>
                      </a>
                   </li>
-                  <li class="nav-item h-25 w-100 d-flex">
+                  <li class="nav-item w-100 d-flex flex-grow-1">
                      <button class="btn btn-outline-danger mt-auto mx-auto" id="logout">
                         <i class="fa-solid fa-power-off">&emsp;</i>Log Out
                      </button>
