Set up structures for different sections.

--- a/views/index.html
+++ b/views/index.html
@@ -89,17 +89,41 @@
 
       <!-- Sections -->
       <div class="col-lg-10 col-md-12 ps-0" id="contentBox">
+         <section id="dashBoard"></section>
+
+         <section id="gamePane"></section>
+
+         <section id="selectLevel"></section>
+
+         <section id="admin"></section>
+
+         <footer></footer>
 
       </div>
    </div>
 
    <!-------------------------------------------------------------------------->
 
-   <!-- Main Contents -->
+   <!-- Full screen sections -->
+   <section id="entry"></section>
+
+   <section id="login"></section>
+
+   <section id="register"></section>
+
+   <section id="settingUp"></section>
+
+   <!-------------------------------------------------------------------------->
+
+   <!-- Masks & Covers -->
+   <div id="paused">
+      <!-- warning modal also included here -->
+   </div>
+
+   <div id="won"></div>
 
 
-</div>
+</div>   <!-- End outer-most container -->
 
 </body>
-
 </html>
