Fixed visual issue of footer hr display on top of nav menu under small screen size.

--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -16,7 +16,7 @@ body {
    background-color: var(--success-highlight);
 }
 
-nav {
+.navbar {
    padding: 1em;
    border-bottom: 2px solid var(--bs-success);
 }
