--- a/views/index.html
+++ b/views/index.html
@@ -48,7 +48,7 @@
                <span class="navbar-toggler-icon"></span>
             </button>
          
-            <div class="collapse navbar-collapse" id="navList">
+            <div class="collapse navbar-collapse z-2" id="navList">
                <button type="button" class="btn-close" data-bs-toggle="collapse" data-bs-target="#navList" aria-controls="navList" aria-label="Close Navigation"></button>
                <ul class="navbar-nav mr-auto align-items-center">
                   <li class="nav-item active">
@@ -88,7 +88,7 @@
       </div>
 
       <!-- Sections -->
-      <div class="col-lg-10 col-md-12 ps-0 d-flex flex-column" id="contentBox">
+      <div class="col-lg-10 col-md-12 p-0 d-flex flex-column" id="contentBox">
          <section class="flex-grow-1" id="dashBoard">
             
          </section>
@@ -99,7 +99,7 @@
 
          <section class="flex-grow-1" id="admin"></section>
 
-         <footer class="text-center mb-1">
+         <footer class="text-center mb-1 z-1">
             <!-- TODO: use JS to setup width for footer while activating sections -->
             <hr>
             <kbd class="bg-secondary">&copy;Copyright 2024. CPSC 2600 - Group #</kbd>
