--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -62,6 +62,30 @@ body {
    background-color: var(--bs-white);
 }
 
+/** Dashboard settings */
+#dashBoard {
+   padding: 3em 1em;
+}
+
+#avatar {
+   width: 50vw;
+   min-width: 200px;
+   height: 60vh;
+   justify-content: center;
+   gap: 30px;
+}
+
+#avatarBorder {
+   border: 4px solid var(--success-border);
+   border-radius: 50%;
+
+   box-sizing: content-box;
+   width: 200px;
+   height: auto;
+
+   box-shadow: 1px 1px 5px gray;
+}
+
 
 /** Large screen size */
 @media screen and (min-width: 1200px){
