Adjusted footer size to better align with content hr.

--- a/views/index.html
+++ b/views/index.html
@@ -101,7 +101,7 @@
             </div>
 
             <!-- Divider -->
-            <div class="row text-center w-100">
+            <div class="row text-center w-100 px-4">
                <div class="col-12 d-flex flex-row">
                   <hr class="w-100">
                   <span class="px-3 text-secondary text-nowrap lh-lg" style="font-size: small">Display My Game Activity</span>
