--- a/views/index.html
+++ b/views/index.html
@@ -152,7 +152,39 @@
    <!-- Full screen sections -->
    <section id="entry"></section>
 
-   <section id="login"></section>
+   <section class="d-flex flex-column justify-content-center gap-4 text-center" id="login">
+      <div class="d-flex flex-column gap-1" id="loginTitle">
+         <i class="fa-solid fa-otter"></i>
+         <h1>Login To Hello! Sudoku!</h1>
+         <h6 class="text-secondary">Welcome back! Ready for another puzzle?</h6>
+      </div>
+
+      <form action="post" id="loginForm">
+
+         <div class="d-flex flex-column text-start gap-1">
+            <label for="username">Username</label>
+            <input type="text" name="username" class="border border-subtle rounded" placeholder="Enter your username">
+            <label for="password">Password</label>
+            <input type="password" name="password" class="border border-subtle rounded" placeholder="Enter your password">
+            <span class="text-danger" id="loginErr">${error msg}</span>
+         </div>
+
+         <div class="row gy-3 mt-4">
+            <div class="col-6 text-start">
+               <input type="checkbox">&ensp;Remember Me
+            </div>
+            <div class="col-6 text-end">
+               <a href="#">Forgot Password</a>
+            </div>
+            <div class="col-12">
+               <button class="btn btn-success w-100">Sign in</button>
+            </div>
+         </div>
+      </form>
+
+      <span>Don't have an account?&emsp;<a href="#register">Register Now</a></span>
+      
+   </section>
 
    <section id="register"></section>
 
