--- a/views/index.html
+++ b/views/index.html
@@ -20,6 +20,32 @@
 <body>
 
 <div class="container-fluid p-0" id="outer-most">
+   <!-- Modals need to be at top otherwise might cause error -->
+
+   <!-- Terms & Policy Modal -->
+   <div class="modal fade" id="policy" tabindex="-1" data-backdrop="false">
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+         <div class="modal-content">
+            <div class="modal-header">
+               <h5 class="modal-title">Terms & Policy</h5>
+               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+               <p>Our Terms & Policy contents will goes here</p>
+               <ul>
+                  <li>Item 1</li>
+                  <li>Item 2</li>
+                  <li>Item 3</li>
+               </ul>
+            </div>
+            <div class="modal-footer">
+               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+               <button type="button" class="btn btn-success" id="continueRegister" data-bs-dismiss="modal">Continue</button>
+            </div>
+         </div>
+      </div>
+   </div>
+
 
    <!-- Dark green banner on top (visible only under large screen size) -->
    <div class="row text-white text-center py-2 h6 mb-0" id="top-banner">
@@ -159,7 +185,7 @@
          <h6 class="text-secondary fw-light">Welcome back! Ready for another puzzle?</h6>
       </div>
 
-      <form method="get" id="loginForm">
+      <form id="loginForm">
 
          <div class="d-flex flex-column text-start gap-1">
             <label for="username" class="mt-2 fw-normal">Username</label>
@@ -177,7 +203,7 @@
                <a href="#">Forgot Password</a>
             </div>
             <div class="col-12">
-               <button class="btn btn-success w-100">Sign in</button>
+               <button class="btn btn-success w-100" id="loginBtn">Sign in</button>
             </div>
          </div>
       </form>
@@ -194,7 +220,7 @@
          <h6 class="text-secondary fw-light">Join us for free Sudoku Puzzles!</h6>
       </div>
       
-      <form method="post" id="registerForm">
+      <form id="registerForm">
       
          <div class="d-flex flex-column text-start gap-1">
             <label class="mt-2 fw-normal">Username&nbsp;<span class="text-danger">*</span></label>
@@ -210,12 +236,38 @@
       
          <div class="row gy-3 mt-4">
             <div class="col-12">
-               <button class="btn btn-success w-100">Get Started</button>
+               <button class="btn btn-success w-100" id="registerBtn" data-bs-toggle="modal" data-bs-target="#policy">
+                  Get Started
+               </button>
             </div>
          </div>
       </form>
       
       <span>Already have an account?&emsp;<a href="#login">Log in</a></span>
+
+      <!-- Terms & Policy Modal
+      <div class="modal fade" id="policy" tabindex="-1" data-backdrop="false">
+         <div class="modal-dialog modal-dialog-scrollable">
+            <div class="modal-content">
+               <div class="modal-header">
+                  <h5 class="modal-title">Terms & Policy</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+               </div>
+               <div class="modal-body">
+                  <p>Our Terms & Policy contents will goes here</p>
+                  <ul>
+                     <li>Item 1</li>
+                     <li>Item 2</li>
+                     <li>Item 3</li>
+                  </ul>
+               </div>
+               <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                  <button type="button" class="btn btn-success">Continue</button>
+               </div>
+            </div>
+         </div>
+      </div> -->
    </section>
 
    <section id="settingUp"></section>
