--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -27,7 +27,7 @@ body {
    top: 0px;
    left: 0px;
    width: 100vw;
-   height: calc(100vh - 35px);   /** minus height of top-banner */
+   height: 100vh;
 
    padding: 12vh;
    background-color: var(--bs-white);
@@ -53,6 +53,11 @@ body {
 
 #navList li:hover a {
    text-decoration: underline;
+}
+
+a:hover {
+   /** to fix some random cursor display issue */
+   cursor: pointer;
 }
 
 #logout {
@@ -180,6 +185,7 @@ input[type='password'] {
    #navList {
       position: relative;
       width: 100%;
+      height: calc(100vh - 35px);   /** minus height of top-banner */
 
       padding-left: 0;
       padding-right: 0;
