Completed switch section functions including section display switches and active navlink visual effects.

--- a/views/index.html
+++ b/views/index.html
@@ -86,7 +86,7 @@
 
                   <li class="nav-item">
                      <a class="nav-link sectionLink" href="#daily">
-                        Daily Does Sudoku&emsp;<i class="fa-solid fa-calendar-day"></i>
+                        Daily Sudoku&emsp;<i class="fa-solid fa-calendar-day"></i>
                      </a>
                   </li>
 
@@ -117,7 +117,7 @@
       <!-- Sections -->
       <div class="col-lg-10 col-md-12 p-0 d-flex flex-column" id="contentBox">
 
-         <section class="flex-grow-1 d-flex flex-column align-items-center" id="dashBoard">
+         <section class="flex-grow-1 d-flex flex-column align-items-center" id="dashboard">
             <!-- Avatar -->
             <div class="d-flex flex-column align-items-center" id="avatar">
                <div id="avatarBorder">    <!-- the outer border of avatar (visual effects only) -->
