--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -71,7 +71,7 @@ a:hover {
 }
 
 /** Dashboard settings */
-#dashBoard {
+#dashboard {
    padding: 0;
 }
 
@@ -104,7 +104,7 @@ a:hover {
    font-weight: bold;
 }
 
-#dashBoard p {
+#dashboard p {
    font-weight: normal;
 }
 
@@ -230,7 +230,7 @@ input[type='password'] {
    }
 
    /** Dashboard settings */
-   #dashBoard {
+   #dashboard {
       max-width: 800px;
       margin: auto;
    }
